feat: create carousel and cards

--- a/index.html
+++ b/index.html
@@ -48,7 +48,88 @@
             </div>
         </div>
     </header>
-    
+    <div class="background">
+        <div id="carousel-exemplo" class="container carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div data-bs-interval="3000" class="carousel-item">
+                    <img class="d-block w-100" src="./img/Chainsaw-banner.png">
+                </div>
+                <div data-bs-interval="3000" class="carousel-item active">
+                    <img class="d-block w-100" src="./img/SpyxFamily-banner.png">
+                </div>
+            </div>
+            <button class="carousel-control-prev" data-bs-target="#carousel-exemplo" data-bs-slide="prev" type="button">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" data-bs-target="#carousel-exemplo" data-bs-slide="next" type="button">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+            <div class="carousel-indicators">
+                <button class="active" type="button" data-bs-target="#carousel-exemplo" data-bs-slide-to="0"></button>
+                <button type="button" data-bs-target="#carousel-exemplo" data-bs-slide-to="1"></button>
+            </div>
+        </div>
+    </div>
+    <section class="bg-preto">
+        <div class="container p-5 width">
+            <div class="row">
+                <div class="col-2">
+                    <div class="card text-bg-dark">
+                        <img src="./img/card/dragonball-small.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Dragon Ball Z</h4>
+                            <h5 class="card-subtitle"><strong>Serie</strong> • Leg  | Dub</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card text-bg-dark">
+                        <img src="./img/card/myhero-academy.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Boku no hero</h4>
+                            <h5 class="card-subtitle"><strong>Serie</strong> • Dublada</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card text-bg-dark">
+                        <img src="./img/card/shinobi no ittoki-small.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Shinobi no Ittoki</h4>
+                            <h5 class="card-subtitle"><strong>Serie</strong> • Legendada</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card text-bg-dark">
+                        <img src="./img/card/dragonbal-original.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Dragon Ball</h4>
+                            <h5 class="card-subtitle"><strong>Serie</strong> • Leg | Dub</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card text-bg-dark">
+                        <img src="./img/card/dragon-quest.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">DRAGON QUEST</h4>
+                            <h5 class="card-subtitle"><strong>Serie</strong> • Subtitulado</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card text-bg-dark">
+                        <img src="./img/card/saint.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Saint <br>Seiya</h4>
+                            <h5 class="card-subtitle"><strong>Serie</strong> • Dublado</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="./lib/bootstrap.bundle.min.js"></script>
 </body>
 </html>
