Feat: add cards section and footer

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
     </div>
     <section class="bg-preto">
         <div class="container p-5 width">
-            <div class="row">
-                <div class="col-2">
+            <h1 class="color-white border-bottom p-bottom">Nossas recomendações</h1>
+            <div class="row gap-4 gap-md-0">
+                <div class="col-md-2 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/dragonball-small.png" alt="">
                         <div class="card-body">
@@ -82,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/myhero-academy.png" alt="">
                         <div class="card-body">
@@ -91,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/shinobi no ittoki-small.png" alt="">
                         <div class="card-body">
@@ -100,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/dragonbal-original.png" alt="">
                         <div class="card-body">
@@ -109,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/dragon-quest.png" alt="">
                         <div class="card-body">
@@ -118,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-md-2 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/saint.png" alt="">
                         <div class="card-body">
@@ -130,6 +131,10 @@
             </div>
         </div>
     </section>
+    <footer class="p-3 bg-preto border-top" data-bs-theme="dark">
+        <p class="text-center h5 color-branco">Site criado por <a href="https://github.com/GuiZeroUm"><strong>GuiZeroUm</strong></a><img src="./img/GUIZEROUM.png" class="eu" alt=""></p>
+        
+    </footer>
     <script src="./lib/bootstrap.bundle.min.js"></script>
 </body>
 </html>
