fix: fix the tablet and desktop cols

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container p-5 width">
             <h1 class="color-white border-bottom p-bottom">Nossas recomendações</h1>
             <div class="row gap-4 gap-md-0">
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-6 col-lg-4 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/dragonball-small.png" alt="">
                         <div class="card-body">
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-6 col-lg-4 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/myhero-academy.png" alt="">
                         <div class="card-body">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-6 col-lg-4 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/shinobi no ittoki-small.png" alt="">
                         <div class="card-body">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-6 col-lg-4 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/dragonbal-original.png" alt="">
                         <div class="card-body">
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-6 col-lg-4 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/dragon-quest.png" alt="">
                         <div class="card-body">
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-6 col-lg-4 col-sm-12">
                     <div class="card text-bg-dark">
                         <img src="./img/card/saint.png" alt="">
                         <div class="card-body">
